---
source: parser/src/parser/parser.rs
description: "# Test case to check that we return correct error when two python statements are on the same line\n\ndef foo():\n    x = 1; y = 2\n    return x + y\n\ndef bar():\n    x = 1 y = 2\n    return x + y\n\na = 1  b = 2\n"
---
[
    InvalidSyntax {
        msg: "Statement does not end in new line or semicolon",
        input: "    x = 1",
        advice: "Split the statements into two separate lines or add a semicolon",
        span: (
            160,
            165,
        ),
    },
    InvalidSyntax {
        msg: "Statement does not end in new line or semicolon",
        input: "a = 1",
        advice: "Split the statements into two separate lines or add a semicolon",
        span: (
            190,
            195,
        ),
    },
]
